# ppx-by-example

./: .gitignore  Makefile  README.md  dune  dune-project  ppx-studies.opam
.github/workflows/: build-test.yml
examples/0 - Building AST/: README.md
examples/1 - AST/: README.md
examples/1 - AST/a - Building AST/: README.md  building_ast.ml  dune
examples/1 - AST/b - Destructing AST/: README.md  destructuring_ast.ml  dune
examples/1 - Destructing AST/: README.md  destructing_ast.ml
examples/2 - Writing PPXs/: README.md
examples/2 - Writing PPXs/a - Context Free/: README.md  context_free.ml  dune
examples/2 - Writing PPXs/a - Context Free/demo/: context_free_demo.ml  dune
examples/2 - Writing PPXs/b - Global/: README.md  dune  global.ml
examples/2 - Writing PPXs/b - Global/demo/: dune  global_demo.ml
examples/3 - Testing PPXs/: README.md
examples/3 - Testing PPXs/demo/test/: dune  mel_obj.t  test.ml  test_sample.ml
